--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,14 +1,14 @@
-public net.minecraft.world.entity.monster.EnderMan m_32500_(Lnet/minecraft/world/entity/Entity;)Z
-public net.minecraft.world.entity.monster.EnderMan m_32529_()Z
-public net.minecraft.world.entity.monster.EnderMan m_32534_(Lnet/minecraft/world/entity/player/Player;)Z
+public net.minecraft.world.entity.monster.EnderMan m_32500_(Lnet/minecraft/world/entity/Entity;)Z #teleportTowards
+public net.minecraft.world.entity.monster.EnderMan m_32529_()Z #teleport
+public net.minecraft.world.entity.monster.EnderMan m_32534_(Lnet/minecraft/world/entity/player/Player;)Z #isLookingAtMe
 public net.minecraft.world.entity.monster.EnderMan$EndermanFreezeWhenLookedAt
-protected net.minecraft.world.entity.monster.EnderMan$EndermanFreezeWhenLookedAt f_32547_
+protected net.minecraft.world.entity.monster.EnderMan$EndermanFreezeWhenLookedAt f_32547_ #enderman
 public net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal
-protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32567_
-protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32566_
-protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32568_
-protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32569_
-protected net.minecraft.world.entity.ai.goal.SwellGoal f_25916_
-public net.minecraft.world.entity.ai.goal.GoalSelector f_25345_
-public net.minecraft.server.network.ServerGamePacketListenerImpl f_9737_
-public net.minecraft.world.entity.Entity f_19816_
+protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32567_ #pendingTarget
+protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32566_ #enderman
+protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32568_ #aggroTime
+protected net.minecraft.world.entity.monster.EnderMan$EndermanLookForPlayerGoal f_32569_ #teleportTime
+protected net.minecraft.world.entity.ai.goal.SwellGoal f_25916_ #creeper
+public net.minecraft.world.entity.ai.goal.GoalSelector f_25345_ #availableGoals
+public net.minecraft.server.network.ServerGamePacketListenerImpl f_9737_ #aboveGroundTickCount
+public net.minecraft.world.entity.Entity f_19816_ #eyeHeight
